--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,141 +1,5 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:/mingw64/bin/gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:/mingw64/bin/g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:/mingw64/bin/gdb.exe",
-  "C_Cpp_Runner.cStandard": "",
-  "C_Cpp_Runner.cppStandard": "",
-  "C_Cpp_Runner.msvcBatchPath": "",
-  "C_Cpp_Runner.warnings": [
-    "-Wall",
-    "-Wextra",
-    "-Wpedantic"
-  ],
-  "C_Cpp_Runner.enableWarnings": true,
-  "C_Cpp_Runner.warningsAsError": false,
-  "C_Cpp_Runner.compilerArgs": [],
-  "C_Cpp_Runner.linkerArgs": [],
-  "C_Cpp_Runner.includePaths": [],
-  "C_Cpp_Runner.includeSearch": [
-    "*",
-    "**/*"
-  ],
-  "C_Cpp_Runner.excludeSearch": [
-    "**/build",
-    "**/build/**",
-    "**/.*",
-    "**/.*/**",
-    "**/.vscode",
-    "**/.vscode/**"
-  ],
-  "files.associations": {
-    "iostream": "cpp",
-    "algorithm": "cpp",
-    "array": "cpp",
-    "atomic": "cpp",
-<<<<<<< HEAD
-    "*.tcc": "cpp",
-    "bitset": "cpp",
-    "cctype": "cpp",
-    "cfenv": "cpp",
-    "charconv": "cpp",
-    "chrono": "cpp",
-    "cinttypes": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "codecvt": "cpp",
-    "complex": "cpp",
-    "condition_variable": "cpp",
-    "csetjmp": "cpp",
-    "csignal": "cpp",
-=======
-    "bit": "cpp",
-    "*.tcc": "cpp",
-    "cctype": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
->>>>>>> de8fb1c9f1790082d2eb2b8862f5c56ce98ac78f
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-<<<<<<< HEAD
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cuchar": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "forward_list": "cpp",
-    "list": "cpp",
-    "unordered_map": "cpp",
-    "unordered_set": "cpp",
-=======
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "string": "cpp",
-    "unordered_map": "cpp",
->>>>>>> de8fb1c9f1790082d2eb2b8862f5c56ce98ac78f
-    "vector": "cpp",
-    "exception": "cpp",
-    "functional": "cpp",
-    "iterator": "cpp",
-<<<<<<< HEAD
-    "map": "cpp",
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "random": "cpp",
-    "ratio": "cpp",
-    "regex": "cpp",
-    "set": "cpp",
-    "string": "cpp",
-=======
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "numeric": "cpp",
-    "random": "cpp",
->>>>>>> de8fb1c9f1790082d2eb2b8862f5c56ce98ac78f
-    "string_view": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "utility": "cpp",
-<<<<<<< HEAD
-    "fstream": "cpp",
-    "future": "cpp",
-    "initializer_list": "cpp",
-    "iomanip": "cpp",
-    "iosfwd": "cpp",
-    "istream": "cpp",
-    "limits": "cpp",
-    "mutex": "cpp",
-    "new": "cpp",
-    "ostream": "cpp",
-    "scoped_allocator": "cpp",
-    "shared_mutex": "cpp",
-    "sstream": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "thread": "cpp",
-    "typeindex": "cpp",
-    "typeinfo": "cpp",
-    "valarray": "cpp"
-=======
-    "initializer_list": "cpp",
-    "iosfwd": "cpp",
-    "istream": "cpp",
-    "limits": "cpp",
-    "new": "cpp",
-    "numbers": "cpp",
-    "ostream": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "typeinfo": "cpp"
->>>>>>> de8fb1c9f1790082d2eb2b8862f5c56ce98ac78f
-  }
+    "files.associations": {
+        "vector": "cpp"
+    }
 }
