--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,27 @@
     "files.associations": {
         "vector": "cpp",
         "map": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "xutility": "cpp",
+        "iostream": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "initializer_list": "cpp",
+        "list": "cpp",
+        "regex": "cpp",
+        "scoped_allocator": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "xhash": "cpp",
+        "xmemory": "cpp",
+        "xstring": "cpp",
+        "xtree": "cpp",
+        "bitset": "cpp",
+        "random": "cpp",
+        "type_traits": "cpp",
+        "valarray": "cpp"
     }
 }
